Bug 499474 - The application launcher context menu, invocable via mouse action on the desktop, renders the "Lost & Found" entry without its ampersand.
Summary: The application launcher context menu, invocable via mouse action on the desk...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 6.2.5
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL: https://discuss.kde.org/t/does-a-cont...
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-03 18:21 UTC by Roke Julian Lockhart Beedell
Modified: 2025-02-08 03:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
Demonstration screenshot (for `#c0`). (18.50 KB, image/png)
2025-02-03 18:21 UTC, Roke Julian Lockhart Beedell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roke Julian Lockhart Beedell 2025-02-03 18:21:10 UTC
Created attachment 177936 [details]
Demonstration screenshot (for `#c0`).

SUMMARY
-------

When invoking the application launcher context menu via mouse action on the shell desktop, the "Lost & Found"-named entry renders as "Lost  Found", presumably because the special character isn't escaped (OFC, because it's used for keyboard accelerators).

STEPS TO REPRODUCE
------------------

1. Invoke `plasmashell`.
2. Right-click on the desktop.
3. Select "Desktop and Wallpaper".
4. Select "Mouse Actions".
5. Select the combination box beside "Middle-Button".
6. Set it to "Application Launcher".
7. Select "OK".
8. Middle-click on the desktop.

OBSERVED RESULT
---------------

The "Lost & Found" section is displayed as "Lost  Found".

EXPECTED RESULT
---------------

The "Lost & Found" section should be displayed as "Lost & Found".

SOFTWARE/OS VERSIONS
--------------------

1.	~~~sh
	#!/usr/bin/env sh
	kinfo
	~~~

2.	> ~~~YAML
	> Operating System: Fedora Linux 41
	> KDE Plasma Version: 6.2.5
	> KDE Frameworks Version: 6.10.0
	> Qt Version: 6.8.1
	> Kernel Version: 6.12.11-200.fc41.x86_64 (64-bit)
	> Graphics Platform: Wayland
	> ~~~

ADDITIONAL INFORMATION
----------------------

1.	> This also applies to `&component=Folder`, but since this is the more basic counterpart (and, presumably, its basis), I've reported it at `&component=Desktop Containment` instead.

	...is what I would have said, had that component existed. Instead, it appears that the relevant "About" page leads you to a non-existent component.

	Consequently, I've chosen the most applicable in its stead (albeit not exact):

	> Desktop icons & Folder view
	> ---------------------------
	> 
	> Folder widget, also responsible for showing files and folders on the desktop.

1.	Noticed upon advice from https://discuss.kde.org/t/does-a-context-menu-based-application-menu-exist/29211/6?u=rokejulianlockhart, if of use.
Comment 1 David Redondo 2025-02-04 08:27:34 UTC
Also happens in the German translation for science & maths.

I guess they are stripped because accelerators
Comment 2 Bug Janitor Service 2025-02-04 15:35:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5158
Comment 3 David Redondo 2025-02-05 09:45:40 UTC
Git commit e93866879f8cc23fed0e6a74c6540b49b9e4658e by David Redondo.
Committed on 05/02/2025 at 08:55.
Pushed by davidre into branch 'master'.

containmentactions/applauncher: Escape ampersands
FIXED-IN: 6.3

M  +5    -2    containmentactions/applauncher/launch.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e93866879f8cc23fed0e6a74c6540b49b9e4658e
Comment 4 David Redondo 2025-02-05 10:46:52 UTC
Git commit caa085edc6bf0526b5add4c129207ccfc2db66c3 by David Redondo.
Committed on 05/02/2025 at 09:45.
Pushed by davidre into branch 'Plasma/6.3'.

containmentactions/applauncher: Escape ampersands
FIXED-IN: 6.3


(cherry picked from commit e93866879f8cc23fed0e6a74c6540b49b9e4658e)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +5    -2    containmentactions/applauncher/launch.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/caa085edc6bf0526b5add4c129207ccfc2db66c3