containmentactions/applauncher: Escape ampersands

BUG: 499474
FIXED-IN: 6.3